# Engine

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DB_SCHEMA.md  DECISIONS.md  ORCHESTRATION_LOG.md  PIPELINES.md  README.md  REUSABLE_COMPONENTS.md  TDD_SUMMARY.md  TEST_COVERAGE.md  WORK_PLAN.md  docker-compose.yml  grafo_vial_cdmx.ipynb  pyproject.toml  pytest.ini  traffic_engine_minimal.postman_collection.json
.github/agents/: mongodb-docker-architect.agent.md  orchestrator.agent.md  python-architect.agent.md  python-docs-architect.agent.md  python-software-architect.agent.md  python-tdd.agent.md
.github/prompts/: python-clean-architecture.prompt.md
.github/skills/traffic-engine-tests/: SKILL.md
docker/mongo/init/: 01-init-app.js  01-init-traffic-engine.js
docs/: API.md  ARCHITECTURE.md  CONSUME_SERVICE.md  DEVELOPMENT.md  GEOGRAPHIC_CATALOG.md  INDEX.md  MONGODB_LOCAL.md  SIMULATION.md
scripts/: init_mongo_geodata.py  mini_simulation_ui.py
src/traffic_engine/: __init__.py  config.py
src/traffic_engine/api/: __init__.py  app.py  dependencies.py  realtime_router.py  schemas.py  simulation_manager.py
src/traffic_engine/api/models/: __init__.py  realtime_requests.py  realtime_responses.py  requests.py  responses.py
src/traffic_engine/application/: ports.py
src/traffic_engine/application/contracts/: __init__.py  provider_interfaces.py  realtime_entities.py  realtime_persistence.py  realtime_runtime.py  realtime_streaming.py  simulation_dto.py
src/traffic_engine/application/use_cases/: __init__.py  bootstrap_geographic_areas.py  cancel_simulation.py  create_simulation.py  extend_realtime_session.py  get_geographic_area.py  get_metrics.py  get_simulation.py  get_snapshot.py  list_geographic_areas.py  list_realtime_runs.py  list_realtime_sessions.py  (+8 more)
src/traffic_engine/config/: __init__.py  constants.py
src/traffic_engine/domain/: __init__.py  abstractions.py  exceptions.py  models.py  simulation.py  simulation_builder.py
src/traffic_engine/infrastructure/: __init__.py  mongodb.py  providers.py  repositories.py  runtime.py  topology_source.py
tests/: __init__.py  conftest.py  test_api_app.py  test_api_layer.py  test_domain_models.py  test_lane_change_policy.py  test_multilane_cellular_grid.py  test_multilane_topology_converter.py  test_nasch_model.py  test_nasch_simulation.py  test_performance_multilane.py  test_physical_config.py  test_providers.py  test_public_transport_behavior.py  test_real_engine_smoke.py  test_realtime_api_contracts.py  test_realtime_lane_payload_contracts.py  test_realtime_repository_contracts.py  test_realtime_run_execution.py  test_realtime_sse_recovery.py  test_realtime_websocket_contracts.py  test_simulation_extensibility.py  test_snapshot_lane_payloads.py  test_use_cases.py
(+26 files in other folders)
